// SPDX-FileCopyrightText: 2025 Shun Sakai
//
// SPDX-License-Identifier: Apache-2.0 OR MIT

= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/qrcode-rust2
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.15.0\...HEAD[Unreleased]

=== Changed

* Remove trailing LF from output PIC images ({pull-request-url}/21[#21])

== {compare-url}/v0.14.1\...v0.15.0[0.15.0] - 2025-10-18

=== Added

* Support `no_std` mode
* Add EPS rendering support
* Add rMQR code encoder
* Support automatic determines the smallest Micro QR code
* Re-export `image` crate ({pull-request-url}/13[#13])

=== Changed

* Improve rendered PIC quality
* Change XML declaration of SVG
* Reduce size of SVG output
* Change MSRV to 1.85.0
* Change behavior of `Version::is_micro` to return `false` if the parameter is
  out of the valid range
* Rename crate to `qrcode2`
* Make the `Error` trait available in `no_std` mode ({pull-request-url}/14[#14])

=== Removed

* Remove binary target
* Remove `bench` feature
* Remove deprecated methods ({pull-request-url}/3[#3])