@@ -155,6 +155,21 @@ jobs:
           RUSTDOCFLAGS: "--cfg docsrs -D warnings"
         run: cargo doc --no-deps --document-private-items
 
+  benchmark:
+    name: Benchmark
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+      - name: Setup Rust toolchain
+        uses: dtolnay/rust-toolchain@v1
+        with:
+          toolchain: nightly
+      - name: Cache build artifacts
+        uses: Swatinem/rust-cache@v2.8.1
+      - name: Run benchmarks
+        run: cargo bench
+
   prettier:
     name: Prettier
     runs-on: ubuntu-24.04
